import "google/protobuf/timestamp.proto";

syntax = "proto3";

package carrier;

service CarrierService {
  rpc GetCompanyInfo (CompanyInfoRequest) returns (CompanyInfoResponse);
   rpc GetDriverInfo (DriverInfoRequest) returns (SingleDriverInfoResponse);
   // New Methods
rpc GetAllCarriers (Empty) returns (CompanyListResponse);
  rpc GetAllDrivers (Empty) returns (DriverListResponse);
  rpc GetAllVehicles (Empty) returns (VehicleListResponse); 
  rpc PostDriverOnboarding (OnboardingRequest) returns (OnboardingResponse); 
   rpc GetAllCompanyDrivers (DriverForCompanyInfoRequest) returns (DriverListResponse); 
 rpc RegisterNewTruck (TruckDta) returns (OnboardingResponse); 
 rpc GetAllCarrierTrucks (DriverForCompanyInfoRequest) returns (TruckInformation); 
  rpc fetchTruckData (DriverForCompanyInfoRequest) returns (TruckDetails); 
  rpc updateDriverDetails (OnboardingRequest) returns (OnboardingResponse); 

 rpc PostTruckUpdate (TruckUpdateRequest) returns (OnboardingResponse); 
  rpc PostCarrierUpdate (CompanyUpdateRequest) returns (OnboardingResponse); 

    rpc UpdateCarrierResources (BidData) returns (BidDataResponse); 
 
 
   
  

}
// Request for GetShipperInfo
message DriverForCompanyInfoRequest {
  string id = 1;
}
message BidData {
  Bid bid = 1;
  LocationData locationData = 2;
}
message LocationData {
  
  string targetCity =1;
  string currentCity =2;
  string deliveryTime = 3;
}

message BidDataResponse {
  bool success = 1;
  string message =2;
}

message Bid {
  string vehicle = 1;
  string driver = 2;
  int32 bid = 3;
  bool termsAccepted = 4;
  string loadRefId = 5;
  string companyName = 6;
  string companyPhone = 7;
  string firstName = 8;
  string lastName = 9;
  string companyRefId = 10;
}


message OnboardingRequest {
  string id = 1;
  OnboardingData driver = 2;
}
message TruckUpdateRequest {
  string id = 1;
  Truck truck = 2;
}
message CompanyUpdateRequest {
  string id = 1;
  UpdateCompanyRequest data = 2;
}
message UpdateCompanyRequest {
  string id = 1; // ID of the company to update
  string firstName = 2;
  string lastName = 3;
  string companyPhone = 4;
  string companyName = 5;
  string addressLine1 = 6;
  string addressLine2 = 7;
  string city = 8;
  string state = 9;
  string postalCode = 10;
  string bankName = 11;
  string accountNumber = 12;
  string ifscCode = 13;
}



message OnboardingResponse {
  string message = 1;
  bool success = 2;
}
message TruckInformation {
  string message = 1;
  bool success = 2;
  repeated Truck trucks = 3;
}
message TruckDetails {
  string message = 1;
  bool success = 2;
   Truck truck = 3;
}




message CompanyInfoRequest {
  string companyRefId = 1;
}
// Response for GetShipperInfo
message CompanyInfoResponse {
 bool success =  1;
  Company user = 2;
  string message= 3;
}
message Company { 
string _id = 1; 
string companyRefId = 2; 
string email = 3; 
Name name = 4; 
Address address = 5;
PersonalDetails personalDetails = 6; 

CompanyDetails companyDetails = 7; 
repeated string clients = 8; 
repeated string pickups = 9; 
string status = 10; 
BankDetails bankDetails =11;
} 
 message CompanyDetails { 
string companyName = 1; 
string companyEmail = 2; 
string companyPhone = 3; 
string taxId = 4; 
Address address = 5;
}  
 message BankDetails { 
string bankName = 1; 
string ifscCode = 2; 
string accountNumber = 3; 

}  

message DriverInfoRequest {
  string id = 1;
}
message DriverInfoResponse {
  bool success =  1;
  User user = 2;
  string message= 3;
}
message SingleDriverInfoResponse {
  bool success =  1;
  UserData user = 2;
  string message= 3;
}
message UserData {
  string _id = 1;
  string email = 2;
  string username = 3;
  string role = 4;
  Name name = 5; // Nested Name message

  string companyRefId = 6;
  PersonalDetails personalDetails = 7; // Nested PersonalDetails message
  MainCompanyDetails companyDetails = 8;

  string password = 9;
  string status = 10;
  string driversLicenseNumber = 11;
  string aadharCardNumber = 12;
  string accountNumber = 13;
  string dateOfBirth = 14; // ISO 8601 date string
  string driversLicenseExpiry = 15; // ISO 8601 date string
  string idFile = 16; // File path or URL
  string phoneNumber = 17;
  string contractFile = 18; // File path or URL
  string ifscCode = 19;
  string workStatus = 20;
  bool isBoardingCompleted = 21;
}

message User {
  string _id = 1;
  string email = 2;
  string username = 3;
  string role = 4;
  Name name = 5; // Nested Name message

  string companyRefId = 6;
  PersonalDetails personalDetails = 7; // Nested PersonalDetails message
  CompanyDetails companyDetails = 8;

  string password = 9;
  string status = 10;
  string driversLicenseNumber = 11;
  string aadharCardNumber = 12;
  string accountNumber = 13;
  string dateOfBirth = 14; // ISO 8601 date string
  string driversLicenseExpiry = 15; // ISO 8601 date string
  string idFile = 16; // File path or URL
  string phoneNumber = 17;
  string contractFile = 18; // File path or URL
  string ifscCode = 19;
  bool isBoardingCompleted = 20;
  string workStatus = 21;
  bool isActive = 22;
  string availableBy = 23;
  string currentCity = 24;
  string destinationCity = 25;

}
message Name {
  string firstName = 1;
  string lastName = 2;
}
message TruckDta {
  Truck truck= 1;
}
message PersonalDetails {
  Address address = 1; // Nested Address message
  EmergencyContact emergencyContact = 2; // Nested EmergencyContact message
}
// message companyDetails {
//  CompanyInfo  companyDetails = 1;
  
// }
// message CompanyInfo{
//   string companyName = 1;
//   string companyEmail = 2;
//   string companyPhone = 3;
//   string taxId = 4;
// Address address = 5; // Nested Address message
  
// }
message companyDetails{
  string companyName = 1;
  string companyEmail = 2;
  string companyPhone = 3;
  string taxId = 4;
Address address = 5; // Nested Address message
  
}
message MainCompanyDetails{
 string _id = 1;
  Name name = 2;
  string email = 3;
  string companyRefId = 4;
  companyDetails companyDetails = 5;
  
}



message Address {
  string addressLine1 = 1;
  string addressLine2 = 2;
  string city = 3;
  string state = 4;
  string postalCode = 5;
}

message EmergencyContact {
  string name = 1;
  string phoneNumber = 2;
}



// Empty message for requesting lists of entities (Carriers, Drivers, Vehicles)
message Empty {}

// Response containing a list of companies (Carriers)
message CompanyListResponse {
  repeated CompanyInfoResponse companies = 1;
}



// Response containing a list of drivers
message DriverListResponse {
  bool success = 1;
  repeated User drivers = 2;
  string message = 3;
 
}



// Response containing a list of vehicles
message VehicleListResponse {
  repeated Truck vehicles = 1;
  bool success = 2;
  string message = 3;
}

// Vehicle information structure
message VehicleInfoResponse {
  string vehicleId = 1;
  string vehicleType = 2;
  string model = 3;
  string licensePlate = 4;
  string companyRefId = 5;
}

message OnboardingData {
  string aadharCardNumber = 1;
  string accountNumber = 2;
  string addressLine1 = 3;
  string addressLine2 = 4;
  string city = 5;
  string contractFile = 6; // File path or base64-encoded file data
  string dateOfBirth = 7; // Format: YYYY-MM-DD
  string driversLicenseExpiry = 8; // Format: YYYY-MM-DD
  string driversLicenseNumber = 9;
  string emergencyContactName = 10;
  string emergencyNumber = 11;
  string firstName = 12;
  string idFile = 13; // File path or base64-encoded file data
  string ifscCode = 14;
  string lastName = 15;
  string phoneNumber = 16;
  string postalCode = 17;
  string state = 18;
  string status = 19;
  string workStatus = 20;
  bool isBoardingCompleted = 21;
  bool isActive = 22;
}


message Truck {
  
  string companyRefId = 1;
  string VehicleType = 2;
  string VehicleRegistrationNumber = 3;
  string VehicleColor = 4;
  float VehicleWeight = 5;
  string Status = 6;
  int32 YearOfManufacture = 7;
  int32 NumberOfAxles = 8;
  string LicensePlateNumber = 9;
  string VehicleInspectionStatus = 10;
  string MakeAndModel = 11;
  string FuelType = 12;
  float VehicleCapacity = 13;
  string RCOwnerName = 14;
  string ExpiryDate = 15;
  string InsuranceProvider = 16;
  string PolicyNumber = 17;
  string _id =18;
  string workStatus = 19;
  bool isActive = 20;
  
  string availableBy = 21;
  string currentCity = 22;
  string destinationCity = 23;
}


// Message representing insurance details
message Insurance {
  string expiry_date = 1;
  string provider = 2;
  string policy_number = 3;
}
